2010-08-31  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Isolate all GTK+ typedefs into one file
        https://bugs.webkit.org/show_bug.cgi?id=44900

        * GNUmakefile.am: Add GtkTypedefs.h to the source lists.
        * wtf/Platform.h: #include GtkTypedefs.h for the GTK+ build.
        * wtf/ThreadingPrimitives.h: Remove GTK+ typedefs.
        * wtf/gobject/GOwnPtr.h: Ditto.
        * wtf/gobject/GRefPtr.h: Ditto.
        * wtf/gtk/GtkTypedefs.h: Added.

2010-08-31  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Fix 'make dist' in preparation of the 1.3.3 release
        https://bugs.webkit.org/show_bug.cgi?id=44978

        * GNUmakefile.am: Adding missing headers to the sources list.

2010-08-31  Chao-ying Fu  <fu@mips.com>

        Reviewed by Oliver Hunt.

        Support emit_op_mod() for MIPS
        https://bugs.webkit.org/show_bug.cgi?id=42855

        This patch uses MIPS div instructions for op_mod to improve performance.

        * assembler/MIPSAssembler.h:
        (JSC::MIPSAssembler::div):
        * jit/JITArithmetic.cpp:
        (JSC::JIT::emit_op_mod):
        (JSC::JIT::emitSlow_op_mod):

2010-08-31  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Darin Adler.

        Modify ASSERT_UNUSED and UNUSED_PARAM similar to Qt's Q_UNUSED.
        https://bugs.webkit.org/show_bug.cgi?id=44870

        * wtf/Assertions.h:
        * wtf/UnusedParam.h:

2010-08-31  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        JSC TimeoutChecker::didTimeOut overflows on ARM
        https://bugs.webkit.org/show_bug.cgi?id=38538

        Make getCPUTime() return values relative to the first call.
        The previous implementation relied on simply on currentTime(), which
        return a time since epoch and not a time since the thread started. This